Fixed white space in VSA RMIT logo, added hover effects to social media icons and contact button in about.html, disabled hover effects on brand logo in about.html

--- a/public/stylesheets/about.scss
+++ b/public/stylesheets/about.scss
@@ -58,10 +58,20 @@ main {
     justify-content: space-around;
     align-items: center;
     width: 100vw;
+    
 
     i {
         color: white;   
         font-size: 1.5rem;
+
+        &:hover {
+            color: $pink;
+            text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+            0px 8px 13px rgba(0,0,0,0.1),
+            0px 18px 23px rgba(0,0,0,0.1);
+            transform: scale(1.1)
+            
+        }
     }
 
 }
@@ -85,9 +95,8 @@ main {
 
     &:hover {
         cursor: pointer;
-        background: white;
-        text-shadow: none;
-        color: black;
+        border-color: $pink;
+        color: $pink;
     }
 
     &:focus {
